# pulse

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  package.json  pyproject.toml
.backlog/: TODAY_OUTSTANDING.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
apps/browser/: README.md
apps/provider-console/: README.md
clients/quest3s/: PulseARClient.cs  PulseARModels.cs  README.md
docs/: ARCHITECTURE.md  BACKLOG_100_120_INTERPRETATION_LOBE.md  CHEMISTRY_RECORD_SCHEMA.md  COLLECTIVE_INTELLIGENCE.md  CROWDFUNDING.md  CRYPTO_CORPUS_STUDY.md  DEPENDENCY_READINESS.md  FEATURES.md  GOVERNANCE_VOTEBANK.md  IDENTITY_AND_ACCOUNTS.md  LEGACY_WEAVING_FLOWS.md  LENS_EXPORT_BOUNDARY.md  LENS_INTERPRET_ENDPOINT.md  LENS_PROVENANCE_CONTRACT.md  LENS_RLM_CONTRACT.md  LOC_BY_LANGUAGE.md  MIGRATION_MIRROR_PLAN.md  MIGRATION_votebank_to_vbank.md  MULTI_AGENT_WORKFLOW.md  OWNER_DIRECTION.md  P2P_SETTLEMENT_DESIGN.md  PERSONHOOD_FOUNDATION.md  PROOF_OF_USEFUL_WORK.md  PULSE_AR.md  PULSE_AR_SETUP_MANUAL.md  QUEST3S_AR.md  REQUIREMENTS.md  ROADMAP.md  SYNAPTIC_WEB.md  VBANK.md  architecture.md  homepage_agent_demo.html  knowledge_graph_widget.html  p2p.md  provider-hosts.md  vision.md  worlds.md
docs/i18n/: README.md
docs/i18n/bs/: README.md
docs/i18n/de/: README.md
docs/i18n/en/: README.md
docs/i18n/es/: README.md
docs/i18n/es-AR/: README.md
docs/i18n/fi/: README.md
docs/i18n/fr/: README.md
docs/i18n/id/: README.md
docs/i18n/it/: README.md
docs/i18n/nb/: README.md
docs/i18n/nl/: README.md
docs/i18n/pl/: README.md
docs/i18n/pt-BR/: README.md
docs/i18n/pt-PT/: README.md
docs/i18n/ru/: README.md
docs/i18n/sv/: README.md
docs/i18n/tr/: README.md
docs/i18n/zh-CN/: README.md
docs/migration/: ARCHIVED_BRANCHES.md  CLAUDE.snapshot.md  CONTINUATION.md  MIGRATION.md  MIGRATION_PLAN.md  PROJECT_MEMORY.md  PR_CHANGELOG.md  RENAME_RUNBOOK.md  knitweb-legacy-import.md
docs/research/: 08-knitweb.md  09-finance-settlement.md  09-time-value-and-relevance.md  README.md
examples/: chemistry_agent_server.py  chemistry_lens_agent_demo.py  crowdfunding_demo.py  mvp_demo.py  pouw_demo.py  pulse_ar_demo.py  pulse_ar_server.py  synaptic_demo.py  vbank_demo.py
examples/hello-peer/: README.md
examples/pulse_ar_web/: index.html
experiments/: ledger.py
hosts/provider/: README.md
infra/: README.md
knitweb/: __init__.py  addressing.py  dot.py  fbr.py  fiber.py  graph.py  knot.py  market.py  pulse.py  risk.py
legacy/: README.md
legacy/weaving-app/: README.md  main.js
legacy/weaving-app/tests/: pixelate.py
peer/: README.md
scripts/: chat_gui.py  ingest_reactions.py  monitor_dashboard.py  relay_server.py
services/bootstrap/: README.md
services/directory/: README.md
services/relay/: README.md
specs/: address.md  peer-session.md  sync.md
src/knitweb/: __init__.py  gateway.py  store.py
src/knitweb/anchor/: __init__.py  origintrail.py
src/knitweb/app/: __init__.py  cli.py
src/knitweb/core/: canonical.py  crypto.py  pulse.py
src/knitweb/edge/: arglass.py  recognize.py  (+1 more)
tests/: README.md  __init__.py
tests/interop/: __init__.py  test_anti_entropy_node.py  test_asyncio_p2p.py  test_cli.py  test_cli_autopersist.py  test_equivocation_policing.py  test_fabric_diffusion.py  test_fabric_node.py  test_feed_partial_sync.py  test_gateway_p2p.py  test_identity_keying_live.py  test_mvp_demo.py  test_p2p_convergence.py  test_p2p_erlay_reconcile.py  test_p2p_inventory_relay.py  test_p2p_mesh_propagation.py  test_pex_discovery.py  test_pex_eclipse_resistance.py  test_relay_transport.py
tests/knitwebs/: test_chat_gui.py  test_chemistry.py  test_finance.py  test_operational.py  test_supplychain.py
tests/looms/: test_chemistry.py  test_energy.py  test_finance.py  test_operational.py  test_supplychain.py
tests/property/: test_account_from_seed.py  test_addrbook.py  test_address_scheme.py  test_agent_memory_canonical.py  test_anchor.py  test_anchor_origintrail.py  test_anchor_verify.py  test_anti_entropy.py  test_ar_overlay_il119.py  test_bootstrap.py  test_canonical.py  test_canonical_fuzz.py  test_canonical_strict_decode.py  test_cli_compile.py  test_cli_edge_load.py  test_crowdfunding_campaign.py  test_crowdfunding_end_to_end.py  test_crowdfunding_gate_stub.py  test_crowdfunding_payout_validate.py  test_crowdfunding_settlement_exec.py  test_crowdfunding_settlement_session.py  test_crypto.py  test_declared_fault_refund.py  test_dispute_collateral.py  test_dispute_quorum.py  test_distill_elapsed_ms_byte_identity.py  test_distill_intermediates_il103.py  test_distill_mode_bench_il108.py  test_distill_provenance_gate_il102.py  test_distill_token_budget.py  test_edge.py  test_equivocation.py  test_fabric_attention.py  test_fabric_attest.py  test_fabric_crosspath_authority.py  test_fabric_ingest_convergence.py  test_fabric_ingest_envelope_flip.py  test_fabric_items.py  test_fabric_node_edges.py  test_fabric_provenance_contract.py  (+102 more)
tests/python/: test_knitweb.py  test_risk.py
tools/: check-repo-shape.mjs  check_owner_direction.py  generate_migration_plan.py  loc_report.py
tools/cli/: README.md  index.mjs  package.json
worlds/earth/: profile.md
worlds/mars/: profile.md
worlds/moon/: profile.md
(+121 files in other folders)
