[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knitweb"
version = "0.6.0"
description = "Knitweb: a pure-Python peer-to-peer web for verifiable compute and a traceable knowledge/resource fabric woven by p2p spiders, with OriginTrail symbiosis."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "febuz", email = "develuse@gmail.com" }]
keywords = ["p2p", "peer-to-peer", "knowledge-graph", "provenance", "origintrail", "verifiable-compute", "pulse"]

# Runtime deps deliberately minimal for the credibly-neutral core.
# `cryptography` provides secp256k1 ECDSA + SHA-256; canonical CBOR is hand-rolled
# (see knitweb.core.canonical) so the hash-critical path has zero external surface.
dependencies = [
    "cryptography>=48.0.1",
]

[project.urls]
Homepage = "https://github.com/knitweb/pulse"
Repository = "https://github.com/knitweb/pulse"
Documentation = "https://github.com/knitweb/pulse/tree/main/docs"

[project.scripts]
knitweb = "knitweb.app.cli:main"
pulse = "knitweb.app.cli:main"

[project.optional-dependencies]
# Heavier layers, installed per role. The base ledger never needs these.
p2p = ["py-libp2p"]
compute = ["wgpu", "juliacall"]
data = ["polars", "pyarrow>=23.0.1"]
experiments = ["mlflow>=3.14.0"]
dev = ["pytest>=9.0.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/knitweb"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# importlib import mode lets same-named test modules coexist across suites
# (e.g. tests/property and tests/interop both holding a feed-sync test file)
# without needing __init__.py packages.
addopts = "--import-mode=importlib"
markers = [
    "property: deterministic property/parity tests for the core (fast)",
    "interop: two-node networked tests (Phase 3+)",
    "knitweb: domain-knitweb tests (Phase 5+)",
]

# Target free-threaded CPython 3.14 once dependency wheels are stable; the I/O-bound
# core runs unchanged on the GIL build (3.12+) in the meantime.
